# hietesttool

./: .env.example  .gitignore  =5.9  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  test_assertion.xml
.ai/: story-5.1-review-notes.md
.bmad-core/: install-manifest.yaml
.clinerules/: 00-qa-test-execution.md  00-research-protocol.md
config/: README.md  batch-development.json  batch-staging.json  batch-testing.json
docs/: architecture.md  brief.md  ccd-templates.md  configuration-guide.md  csv-format.md  initialprompt.md  logging-guide.md  mock-server-configuration.md  mock-servers.md  prd.md  quickstart-templates.md  saml-guide.md  spike-findings-1.1-soap-mtom.md  spike-findings-1.2-xml-signing-validation.md  spike-findings-1.3-hl7v3-messages.md  troubleshooting.md  ws-security-guide.md
docs/architecture/: adr-001-hybrid-mtom-implementation.md  adr-002-signxml-for-saml-signing.md  adr-003-hl7v3-message-construction.md  architectural-analysis-story-1.3.md  checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/prd/: checklist-results-report.md  epic-1-foundation-csv-processing.md  epic-2-mock-ihe-endpoints.md  epic-3-template-engine-ccd-personalization.md  epic-4-saml-generation-xml-signing.md  epic-5-pix-add-transaction-implementation.md  epic-6-iti-41-document-submission-complete-workflow.md  epic-7-integration-testing-documentation.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md
docs/qa/: sprint-change-proposal-story-1.4.md
docs/stories/: 1.1.soap-mtom-integration-spike.md  1.10.configuration-file-support.md  1.11.sample-csv-templates-examples.md  1.2.xml-signing-validation-spike.md  1.3.hl7v3-message-construction-spike.md  1.4.project-structure-dependencies.md  1.5.csv-parser-implementation.md  1.6.patient-id-auto-generation.md  1.7.csv-validation-error-reporting.md  1.8.basic-cli-csv-operations.md  1.9.logging-audit-trail-foundation.md  2.1.flask-mock-server-foundation.md  2.2.mock-pix-add-endpoint-implementation.md  2.3.mock-iti41-endpoint-implementation.md  2.4.mock-server-cli-commands.md  2.5.mock-endpoint-configuration-customization.md  2.6.mock-server-documentation-examples.md  3.1.xml-template-loader-validator.md  3.2.string-replacement-engine.md  3.3.ccd-template-personalization.md  3.4.template-library-examples.md  3.5.template-processing-cli.md  4.1.certificate-management-loading.md  4.2.template-based-saml-generation.md  4.3.programmatic-saml-generation.md  4.4.xml-signature-implementation.md  4.5.ws-security-header-construction.md  4.6.saml-cli-testing-tools.md  5.1.hl7v3-message-builder-foundation.md  5.2.pix-add-soap-client.md  5.3.pix-add-acknowledgment-parsing.md  (+13 more)
examples/: README.md  acknowledgment_parsing_example.py  config.example.json  error_handling_example.py  hl7v3_message_example.py  patients_minimal.csv  patients_sample.csv  pix_add_submission_example.py  pix_add_workflow_example.py  programmatic_saml_example.py  signxml_saml_example.py  ws_security_example.py
mocks/: .mock-server.pid  config.json
scripts/: generate_cert.sh
templates/: README.md  ccd-minimal.xml  ccd-template.xml  saml-minimal.xml  saml-template.xml  saml-with-attributes.xml
tests/: __init__.py  conftest.py
(+229 files in other folders)
